Bug 1041416 - Preven a race condition between the deserialization and the destruction of DXGI textures for the D3D9 backend. r=Bas